force-app/main/default/objects/Assechmur_Lignededevis__c/Assechmur_Lignededevis__c.object-meta.xml
<CustomObject>
    <label>Ligne de devis</label>
    <nameField>
        <displayFormat>Ligne de devis-{000}</displayFormat>
        <label>Nom de la ligne de devis</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de devis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>