force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_BVI1longueur1__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_BVI1longueur1__c</fullName>
    <label>BVI 1</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>