force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Coin1longueur3__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Coin1longueur3__c</fullName>
    <label>Coin 1</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>