force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Devis__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Devis__c</fullName>
    <label>Devis</label>
    <referenceTo>Assechmur_Devis__c</referenceTo>
    <relationshipLabel>Lignes de devis</relationshipLabel>
    <relationshipName>Assechmur_Lignesdedevis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>