force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Epaisseur1__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Epaisseur1__c</fullName>
    <inlineHelpText>Veuillez entrer l&apos;épaisseur en centimètres (cm).</inlineHelpText>
    <label>Epaisseur 1</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>