force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Epaisseur2__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Epaisseur2__c</fullName>
    <label>Epaisseur 2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>