force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Mur10Longueur__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Mur10Longueur__c</fullName>
    <label>Mur 10 (Longueur)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>