force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Mur10Surfacem2__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Mur10Surfacem2__c</fullName>
    <formula>IF(
  OR(ISBLANK(Assechmur_Mur10Longueur__c), ISBLANK(Assechmur_Mur10Hauteur__c), Assechmur_Mur10Longueur__c = 0, Assechmur_Mur10Hauteur__c = 0),
  NULL,
  Assechmur_Mur10Longueur__c * Assechmur_Mur10Hauteur__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mur 10 (Surface-m²)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>