force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Mur1longueur1__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Mur1longueur1__c</fullName>
    <inlineHelpText>Veuillez entrer la longueur du mur en mètres (m).</inlineHelpText>
    <label>Mur 1</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>