force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Mur2Hauteur__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Mur2Hauteur__c</fullName>
    <label>Mur 2 (Hauteur)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>