force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_NombredemachineCommande__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_NombredemachineCommande__c</fullName>
    <label>Nombre de machine - Commande</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>