force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_NombredemachineExtracteurMICRO__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_NombredemachineExtracteurMICRO__c</fullName>
    <label>Nombre de machine - Extracteur MICRO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>