force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Nomduproduit__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Nomduproduit__c</fullName>
    <formula>Assechmur_Produit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom du produit</label>
    <type>Text</type>
</CustomField>