force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_PrixdeventeExtracteurMICRO__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_PrixdeventeExtracteurMICRO__c</fullName>
    <label>Prix de vente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>