force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Prixm2plafonnerBXL__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Prixm2plafonnerBXL__c</fullName>
    <formula>Assechmur_Prixm2aplafonner__c * 1.12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix m² à plafonner - BXL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>