force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Prixradiateurademonter__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Prixradiateurademonter__c</fullName>
    <formula>Assechmur_Radiateurademonter__c * 75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix radiateur à démonter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>