force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_PrixtotalBruxelles__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_PrixtotalBruxelles__c</fullName>
    <formula>Assechmur_Prixtotal__c * 1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix total - Bruxelles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>