force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Prixtotaltemporaire__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Prixtotaltemporaire__c</fullName>
    <label>Prix total temporaire</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>