force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_PrixtotalVMC__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_PrixtotalVMC__c</fullName>
    <formula>((Assechmur_NombredemachineAFU1__c * Assechmur_PrixdeventeAFU1__c) + 
(Assechmur_NombredemachineAFU3__c * Assechmur_PrixdeventeAFU3__c) + 
(Assechmur_NombredemachineCommande__c * Assechmur_Prixdeventecommande__c ) + 
(Assechmur_NombredemachineExtrac12V220V__c * Assechmur_PrixdeventeExtracteur12V220V__c) + 
(Assechmur_NombredemachineExtracteur200__c * Assechmur_PrixdeventeExtracteur200__c) + 
(Assechmur_NombredemachineExtracteurMICRO__c * Assechmur_PrixdeventeExtracteurMICRO__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix total VMC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>