force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Produit__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (1 AND 5) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Injection</value>
        </filterItems>
        <filterItems>
            <field>Assechmur_Produit__c.Name</field>
            <operation>equals</operation>
            <value>Injection</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Autre</value>
        </filterItems>
        <filterItems>
            <field>Assechmur_Produit__c.Name</field>
            <operation>equals</operation>
            <value>Aérogomage, Cuvelage AS, Foamglas 4cm, Foamglas 6cm, Hydrofuge,Membrane</value>
        </filterItems>
        <filterItems>
            <field>Assechmur_Produit__c.Name</field>
            <operation>equals</operation>
            <value>Injection crème</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Assechmur_Produit__c</referenceTo>
    <relationshipLabel>Lignes de devis</relationshipLabel>
    <relationshipName>Assechmur_Lignesdedevis</relationshipName>
    <type>Lookup</type>
</CustomField>