force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_TarifproduitAFU1__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_TarifproduitAFU1__c</fullName>
    <formula>Assechmur_ProduitVMCAFU1__r.Assechmur_Prix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarif produit standard</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>