force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_TarifproduitExtracteur200__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_TarifproduitExtracteur200__c</fullName>
    <formula>Assechmur_ProduitVMCExtracteur200__r.Assechmur_Prix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarif produit standard</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>