force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Totalm2Surface__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Totalm2Surface__c</fullName>
    <formula>IF(
  Assechmur_Mur1Surfacem2__c + 
  Assechmur_Mur2Surfacem2__c + 
  Assechmur_Mur3Surfacem2__c + 
  Assechmur_Mur4Surfacem2__c + 
  Assechmur_Mur5Surfacem2__c + 
  Assechmur_Mur6Surfacem2__c + 
  Assechmur_Mur7Surfacem2__c + 
  Assechmur_Mur8Surfacem2__c + 
  Assechmur_Mur9Surfacem2__c + 
  Assechmur_Mur10Surfacem2__c = 0,
  NULL,
  Assechmur_Mur1Surfacem2__c + 
  Assechmur_Mur2Surfacem2__c + 
  Assechmur_Mur3Surfacem2__c + 
  Assechmur_Mur4Surfacem2__c + 
  Assechmur_Mur5Surfacem2__c + 
  Assechmur_Mur6Surfacem2__c + 
  Assechmur_Mur7Surfacem2__c + 
  Assechmur_Mur8Surfacem2__c + 
  Assechmur_Mur9Surfacem2__c + 
  Assechmur_Mur10Surfacem2__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total m² - Surface</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>