force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_TotalMcrtLayoutLG1__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_TotalMcrtLayoutLG1__c</fullName>
    <formula>CASE(Assechmur_TotalMcrtlongueur1__c,0,NULL,Assechmur_TotalMcrtlongueur1__c)</formula>
    <label>Total Mcrt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>