force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_TotalMcrtlongueur1__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_TotalMcrtlongueur1__c</fullName>
    <formula>Assechmur_TotalMctsanslescoinslongueur1__c + 
  Assechmur_Coin1longueur1__c + 
  Assechmur_Coin2longueur1__c + 
  Assechmur_Coin3longueur1__c + 
  Assechmur_Coin4longueur1__c + 
 Assechmur_Coin5longueur1__c + 
 Assechmur_Coin6longueur1__c + 
 Assechmur_Coin7longueur1__c + 
  Assechmur_Coin8longueur1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Mcrt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>