force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_TotalMcrtlongueur2__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_TotalMcrtlongueur2__c</fullName>
    <formula>Assechmur_TotalMctsanslescoinslongueur2__c + 
  Assechmur_Coin1longueur2__c + 
  Assechmur_Coin2longueur2__c + 
  Assechmur_Coin3longueur2__c + 
  Assechmur_Coin4longueur2__c +
Assechmur_Coin5longueur2__c +
Assechmur_Coin6longueur2__c +
Assechmur_Coin7longueur2__c +
Assechmur_Coin8longueur2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Mcrt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>