force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_Totalmctlongueur1_10__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_Totalmctlongueur1_10__c</fullName>
    <formula>IF(
  Assechmur_Mur1Longueur__c + 
  Assechmur_Mur2Longueur__c + 
  Assechmur_Mur3Longueur__c + 
  Assechmur_Mur4Longueur__c + 
  Assechmur_Mur5Longueur__c + 
  Assechmur_Mur6Longueur__c + 
  Assechmur_Mur7Longueur__c + 
  Assechmur_Mur8Longueur__c +
  Assechmur_Mur9Longueur__c +
  Assechmur_Mur10Longueur__c = 0,
  NULL,
  Assechmur_Mur1Longueur__c + 
  Assechmur_Mur2Longueur__c + 
  Assechmur_Mur3Longueur__c + 
  Assechmur_Mur4Longueur__c + 
  Assechmur_Mur5Longueur__c + 
  Assechmur_Mur6Longueur__c + 
  Assechmur_Mur7Longueur__c + 
  Assechmur_Mur8Longueur__c +
  Assechmur_Mur9Longueur__c +
  Assechmur_Mur10Longueur__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Mct - Longueur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>