force-app/main/default/objects/Assechmur_Lignededevis__c/fields/Assechmur_TotalMctsanslescoinslongueur1__c.field-meta.xml
<CustomField>
    <fullName>Assechmur_TotalMctsanslescoinslongueur1__c</fullName>
    <formula>IF(
  Assechmur_Mur1longueur1__c +
Assechmur_Mur1longueur1X2__c + 
  Assechmur_Mur2longueur1__c + 
Assechmur_Mur2longueur1X2__c +  
  Assechmur_Mur3longueur1__c + 
Assechmur_Mur3longueur1X2__c +  
  Assechmur_Mur4longueur1__c +
Assechmur_Mur4longueur1X2__c +   
  Assechmur_Mur5longueur1__c + 
Assechmur_Mur5longueur1X2__c + 
  Assechmur_Mur6longueur1__c +
Assechmur_Mur6longueur1X2__c + 
  Assechmur_Mur7longueur1__c + 
Assechmur_Mur7longueur1X2__c + 
  Assechmur_Mur8longueur1__c + 
Assechmur_Mur8longueur1X2__c +  
  Assechmur_BVI1longueur1__c + 
  Assechmur_BVI2longueur1__c + 
  Assechmur_BVI3longueur1__c + 
  Assechmur_BVI4longueur1__c + 
  Assechmur_BVI5longueur1__c + 
  Assechmur_BVI6longueur1__c + 
  Assechmur_BVI7longueur1__c + 
  Assechmur_BVI8longueur1__c = 0, 
  NULL, 
    Assechmur_Mur1longueur1__c +
Assechmur_Mur1longueur1X2__c + 
  Assechmur_Mur2longueur1__c + 
Assechmur_Mur2longueur1X2__c +  
  Assechmur_Mur3longueur1__c + 
Assechmur_Mur3longueur1X2__c +  
  Assechmur_Mur4longueur1__c +
Assechmur_Mur4longueur1X2__c +   
  Assechmur_Mur5longueur1__c + 
Assechmur_Mur5longueur1X2__c + 
  Assechmur_Mur6longueur1__c +
Assechmur_Mur6longueur1X2__c + 
  Assechmur_Mur7longueur1__c + 
Assechmur_Mur7longueur1X2__c + 
  Assechmur_Mur8longueur1__c + 
Assechmur_Mur8longueur1X2__c + 
  Assechmur_BVI1longueur1__c + 
  Assechmur_BVI2longueur1__c + 
  Assechmur_BVI3longueur1__c + 
  Assechmur_BVI4longueur1__c +
  Assechmur_BVI5longueur1__c +
  Assechmur_BVI6longueur1__c +
  Assechmur_BVI7longueur1__c +
  Assechmur_BVI8longueur1__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Mct sans les coins</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>